--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="css/bootstrap-theme.css" rel="stylesheet">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link href="css/style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="assets/icon.png" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700" rel="stylesheet">
