--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="hero-text">
                 <h1><span>Hi, We are</span><br>DSST School.</h1>
                 <h3>Start your studies now</h3>
-                <a href="#" class="btn btn-lg btn-primary">Learn More</a>
+                <a href="https://github.com/DSST-School" class="btn btn-lg btn-primary">Learn More</a>
                 <ul class="social-links">
                   <li class="label">Join us here</li>
                   <li><a href="#"><img src="assets/behance.png"></a></li>
@@ -78,31 +78,31 @@
                     <img src="assets/python.png" class="client-logo">
                     <h3 class="text-left title">Flexible language for beginners</h3>
                     <p class="text-left tag">AI, Web, Bot</p>
-                    <p class="text-left"><a href="#">Learn More &#8594;</a></p>
+                    <p class="text-left"><a href="https://github.com/DSST-School">Learn More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/Java.png" class="client-logo">
                     <h3 class="text-left title">Good language for more advanced solutions</h3>
                     <p class="text-left tag">UI, Website, App's</p>
-                    <p class="text-left"><a href="#">Learn More &#8594;</a></p>
+                    <p class="text-left"><a href="https://github.com/DSST-School">Learn More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/Front.png" class="client-logo">
                     <h3 class="text-left title">Basics for website development</h3>
                     <p class="text-left tag">UI, Website</p>
-                    <p class="text-left"><a href="#">Learn More &#8594;</a></p>
+                    <p class="text-left"><a href="https://github.com/DSST-School">Learn More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/Figma.png" class="client-logo">
                     <h3 class="text-left title">The most convenient and functional environment for web design</h3>
                     <p class="text-left tag">Branding, UI, Website, App's</p>
-                    <p class="text-left"><a href="#">Learn More &#8594;</a></p>
+                    <p class="text-left"><a href="https://github.com/DSST-School">Learn More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/C++.png" class="client-logo">
                     <h3 class="text-left title">Advanced language for creating large and complex projects</h3>
                     <p class="text-left tag">App's</p>
-                    <p class="text-left"><a href="#">Learn More &#8594;</a></p>
+                    <p class="text-left"><a href="https://github.com/DSST-School">Learn More &#8594;</a></p>
                   </div>
                 </div>
                 
