--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <li class="label">Join us here</li>
                   <li><a href="#"><img src="assets/behance.png"></a></li>
                   <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="#"><img src="assets/twitter.png"></a></li>
+                  <li><a href="https://x.com/DSSTSchool"><img src="assets/twitter.png"></a></li>
                   <li><a href="https://github.com/DSST-School"><img src="assets/github.png"></a></li>
                 </ul>
               </div>
@@ -232,7 +232,7 @@
               <ul class="social-links">
                 <li><a href="#"><img src="assets/behance.png"></a></li>
                 <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                <li><a href="#"><img src="assets/twitter.png"></a></li>
+                <li><a href="https://x.com/DSSTSchool"><img src="assets/twitter.png"></a></li>
                 <li><a href="https://github.com/DSST-School"><img src="assets/github.png"></a></li>
               </ul>
             </div>
